corpus/cpp/ranges_views/case-01/snapshots/gcc13_14/single_sink_structured/render.verbose.txt
error: [ranges_views] C++20 ranges or views error @ src/main.cpp:4:22
help: check that the range/iterator models the required concept (input_range, forward_range, etc.)
raw : no match for ‘operator|’ (operand types are ‘int’ and ‘std::ranges::views::__adaptor::_Partial<std::ranges::views::_Take, int>’)
| src/main.cpp:4:22
|     auto result = 42 | std::views::take(2);
|                      ^
template: /usr/include/c++/13/ranges:896:7 candidate: ‘template<class _Lhs, class _Rhs>  requires (derived_from<_Lhs, std::ranges::views::__adaptor::_RangeAdaptorClosure>) && (derived_from<_Rhs, std::ranges::views::__adaptor::_RangeAdaptorClosure>) constexpr auto std::ranges::views::__adaptor::operator|(_Lhs, _Rhs)’
template: /usr/include/c++/13/ranges:896:7 template argument deduction/substitution failed:
template: /usr/include/c++/13/ranges:887:7 candidate: ‘template<class _Self, class _Range>  requires (derived_from<typename std::remove_cvref<_Tp>::type, std::ranges::views::__adaptor::_RangeAdaptorClosure>) && (__adaptor_invocable<_Self, _Range>) constexpr auto std::ranges::views::__adaptor::operator|(_Range&&, _Self&&)’
template: /usr/include/c++/13/ranges:887:7 template argument deduction/substitution failed:
note: candidate: ‘template<class _Lhs, class _Rhs>  requires (derived_from<_Lhs, std::ranges::views::__adaptor::_RangeAdaptorClosure>) && (derived_from<_Rhs, std::ranges::views::__adaptor::_RangeAdaptorClosure>) constexpr auto std::ranges::views::__adaptor::operator|(_Lhs, _Rhs)’
note: template argument deduction/substitution failed:
note: constraints not satisfied
note: ‘std::ranges::views::__adaptor::_RangeAdaptorClosure’ is not a base of ‘int’
note: candidate: ‘template<class _Self, class _Range>  requires (derived_from<typename std::remove_cvref<_Tp>::type, std::ranges::views::__adaptor::_RangeAdaptorClosure>) && (__adaptor_invocable<_Self, _Range>) constexpr auto std::ranges::views::__adaptor::operator|(_Range&&, _Self&&)’
note: the required expression ‘declval<_Adaptor>()((declval<_Args>)()...)’ is invalid
note: set ‘-fconcepts-diagnostics-depth=’ to at least 2 for more detail
note: omitted 2 additional note(s)
debug: rule_id=rule.family.ranges_views.structured_or_message
debug: matched_conditions=message_contains=std::ranges::, child_message_contains=std::ranges::
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output